# compiladores

./: .clang-format  .gitignore  CMakeLists.txt  Conjunto de instruções da VM.txt  README.md  out.tm  run.sh  test.cm  tm  tm.c
docs/: Instrucoes_VM.txt
include/: globals.h  parser.h  symtab.h  tokens.h
src/: lexer.l  lexico.l  lexico_example_c.l  main.cpp  parser.cpp  parser.y  symtab.cpp
src/sample/: lexico_sample.l
tests/: basico.txt  comment.txt  expressions.txt  if_test.txt  ops.txt  test.cm  test.l  test1.txt  test2.cm  test3.cm  test5.tm  teste.txt  var.txt
tests/v2/: funcao1.txt  funcao2.txt
